--- a/style.css
+++ b/style.css
@@ -1,2 +1,18 @@
-*{box-sizing: border-box; padding: 0; margin: 0;}
+/*
+    Alapok
+*/
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+*{box-sizing: border-box; padding: 0; margin: 0; font-family: "Red Hat Display", sans-serif;}
 img{width: 100%;}
+
+/*
+    Színek változói
+*/
+
+:root{
+    --light-green: rgba(181, 228, 140, 1);
+    --light-green-2: rgba(153, 217, 140, 1);
+    --turquoise: rgba(52, 160, 164, 1);
+    --bondi-blue: rgba(22, 138, 173, 1);
+    --lapis-lazuli: rgba(30, 96, 145, 1);
+}
