--- a/style.css
+++ b/style.css
@@ -16,3 +16,37 @@ img{width: 100%;}
     --bondi-blue: rgba(22, 138, 173, 1);
     --lapis-lazuli: rgba(30, 96, 145, 1);
 }
+header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    font-size: 1.3rem;
+}
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+}
+.guess-input {
+    width: 50px;
+    height: 50px;
+    margin: 5px; 
+    border: 3px solid #ccc;
+    border-radius: 5px; 
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 700;
+}
+#submitButton{
+    background-color: green;
+    display: block;
+    margin: 0 auto;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-top: 10px;
+}
