--- a/style.css
+++ b/style.css
@@ -85,8 +85,24 @@ header img{width: 3.7rem;}
   margin-top: 40px;
   font-weight: bold;
   margin-bottom: 40px;
+  position: relative;
 }
+/*
+    Popup
+*/
 
+.popup {
+  display: none;
+  background-color: rgba(255, 255, 255, 1);
+  z-index: 3;
+  position: absolute;
+  top: 1.5rem;
+  left: 25%;
+  right: 25%;
+  height: 50vh;
+  justify-content: center;
+  align-items: center;
+  }
 /*
     Tippelt betű és billentyűzet beállításai
 */
